external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_types_checked_invalid.exp
error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_types_checked_invalid.move:15:9
   │
 6 │         $_a: u64,
   │              --- Expected: 'u64'
   ·
15 │         foo!<u64, NeedsCopy<bool>>(false, &mut 1, NeedsCopy {});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                          │
   │         │                          Given: 'bool'
   │         Invalid call of 'a::m::foo'. Invalid argument for parameter '$_a'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_types_checked_invalid.move:16:9
   │
 7 │         $_r: &mut u64,
   │                   --- Expected: 'u64'
   ·
16 │         foo!<u64, NeedsCopy<bool>>(0, &mut false, NeedsCopy {});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                                  │
   │         │                                  Given: 'bool'
   │         Invalid call of 'a::m::foo'. Invalid argument for parameter '$_r'

error[E04006]: invalid subtype
   ┌─ tests/move_2024/typing/macros_types_checked_invalid.move:17:9
   │
 7 │         $_r: &mut u64,
   │              -------- Expected: '&mut u64'
   ·
17 │         foo!<u64, NeedsCopy<bool>>(0, &0, NeedsCopy {});
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │                             │
   │         │                             Given: '&{integer}'
   │         Invalid call of 'a::m::foo'. Invalid argument for parameter '$_r'

